add shadows for features icons

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-kiss-beam m-auto text-info"></i>
+              <i class="fas fa-kiss-beam m-auto text-info smooth"></i>
             </div>
             <h3>Удовольствие!</h3>
             <p class="lead mb-0">Получать удовольствие от чтения</p>
@@ -157,7 +157,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-piggy-bank m-auto text-info"></i>
+              <i class="fas fa-piggy-bank m-auto text-info smooth"></i>
             </div>
             <h3>Время!</h3>
             <p class="lead mb-0">Экономить время</p>
@@ -166,7 +166,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-brain m-auto text-info"></i>
+              <i class="fas fa-brain m-auto text-info smooth"></i>
             </div>
             <h3>Понимание!</h3>
             <p class="lead mb-0">Улучшить понимание и запоминание информации</p>
@@ -643,7 +643,7 @@
       <br />
 
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/JASQPFO0nzo" frameborder="0"
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_2z7dQUSKRg" frameborder="0"
           allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <br />
