--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="col-lg-3">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-2">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-user-tie m-auto text-primary"></i>
+              <i class="fas fa-user-tie m-auto text-primary  smooth"></i>
             </div>
             <!-- <h3>Бизнес</h3> -->
             <p class="lead mb-0">руководителям, бизнесменам</p>
@@ -200,7 +200,7 @@
         <div class="col-lg-3">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-2">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-chalkboard-teacher m-auto text-warning"></i>
+              <i class="fas fa-chalkboard-teacher m-auto text-warning  smooth"></i>
             </div>
             <!-- <h3>Психология!</h3> -->
             <p class="lead mb-0">психологам, тренерам, учителям</p>
@@ -209,7 +209,7 @@
         <div class="col-lg-3">
           <div class="features-icons-item mx-auto mb-0 mb-lg-2">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-user-graduate m-auto text-danger"></i>
+              <i class="fas fa-user-graduate m-auto text-danger  smooth"></i>
             </div>
             <!-- <h3>Учеба</h3> -->
             <p class="lead mb-0">студентам, школьникам, аспирантам</p>
@@ -218,7 +218,7 @@
         <div class="col-lg-3">
           <div class="features-icons-item mx-auto mb-0 mb-lg-2">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-book-reader m-auto text-success"></i>
+              <i class="fas fa-book-reader m-auto text-success  smooth"></i>
             </div>
             <!-- <h3>Саморазвитие</h3> -->
             <p class="lead mb-0">людям, занимающимся саморазвитием</p>
