--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h1 class="display-1" style="font-weight: 500; font-size:2.8rem; padding-bottom: 80px ">Тренинг
               <br />"Скорочтение
               экспресс-методом"</h1>
-            <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">19-20 октября 2019, Москваг</h1>
+            <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">19-20 октября 2019, Москва</h1>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <br />
