--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h1 class="display-1" style="font-weight: 500; font-size:2.8rem; padding-bottom: 80px ">Тренинг
               <br />"Скорочтение
               экспресс-методом"</h1>
-            <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">19-20 октября 2020, Москва</h1>
+            <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">19-20 октября <script>document.write(new Date().getFullYear())</script>, Москва</h1>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <br />
@@ -372,7 +372,7 @@
     <div class="container">
       <div class="text-center">
         <h1 class="display-4">Расписание</h1>
-        <h2 class="display-6">открытых тренингов на 2020 год</h2>
+        <h2 class="display-6">открытых тренингов на <script>document.write(new Date().getFullYear())</script> год</h2>
       </div>
       <div class="row">
         <div class="col-sm-12 d-none d-sm-block">
